# aiverse

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  credit.py  job.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  credits.py  jobs.py  users.py
backend/app/schemas/: __init__.py  auth.py  common.py  credit.py  job.py  user.py
backend/app/services/: auth_service.py  credit_service.py  job_service.py  user_service.py
backend/app/utils/: errors.py  pagination.py  response.py
backend/docs/: api-flow.md
backend/migrations/: env.py
backend/tests/: conftest.py  helpers.py  test_admin.py  test_auth.py  test_credits.py  test_e2e.py  test_jobs.py  test_startup.py  test_users.py
engine/: README.md  out.jsonl  out_20260425_004132.jsonl  pyproject.toml
engine/checkpoints/emotion/: 9cbe34f2c8ccd7f1.jsonl
engine/configs/: emotion_detection_bedrock.yaml  fintech_support_triage.yaml  hr_intent.yaml  hr_intent_bedrock.yaml
engine/debug/edge_test/: out.jsonl
engine/docs/implementation/: 01-axes-discovery.md  03-allocation-plan.md  04-prompt-composition.md  05-generation.md  06-judge.md  config-reference.md  providers.md
engine/graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
engine/tests/: test_compose.py  test_dedup.py  test_discover.py  test_judge.py  test_logic_filter.py  test_ollama_repair.py  test_plan.py  test_quality.py  test_schema.py
(+64 files in other folders)
